    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mittereflores.origami.ActivityChristmas"
        android:id="@+id/actChristmas">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="?android:attr/actionBarSize"
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_1"
                    android:id="@+id/textChristmas1"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage1"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_2"
                    android:id="@+id/textChristmas2"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage2"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_3"
                    android:id="@+id/textChristmas3"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage3"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_4"
                    android:id="@+id/textChristmas4"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage4"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_5"
                    android:id="@+id/textChristmas5"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage5"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_6"
                    android:id="@+id/textChristmas6"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage6"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_7"
                    android:id="@+id/textChristmas7"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage7"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_8"
                    android:id="@+id/textChristmas8"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage8"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_9"
                    android:id="@+id/textChristmas9"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />


                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage9"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textChristmas_10"
                    android:id="@+id/textChristmas10"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />



            </LinearLayout>
        </ScrollView>

    </LinearLayout>

