    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff"
        tools:context="com.mittereflores.origami.Plane_4_Activity"
        android:id="@+id/actPlane_4">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_1"
                    android:id="@+id/textMovingPlane41"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage1"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_2"
                    android:id="@+id/textMovingPlane42"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage2"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_3"
                    android:id="@+id/textMovingPlane43"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage3"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_4"
                    android:id="@+id/textMovingPlane44"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage4"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_5"
                    android:id="@+id/textMovingPlane45"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage5"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_6"
                    android:id="@+id/textMovingPlane46"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage6"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_7"
                    android:id="@+id/textMovingPlane47"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage7"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPlane_4_8"
                    android:id="@+id/textMovingPlane48"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />

                <ImageView
                    android:layout_width="@dimen/button_image_size_width"
                    android:layout_height="@dimen/button_image_size_height"
                    android:id="@+id/vectorImage8"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished"
                    android:id="@+id/textMovingPlane49"
                    android:textSize="@dimen/button_name_size_height"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:layout_marginBottom="@dimen/button_image_vertical_margin" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

